--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.13"
+		"@astrojs/tailwind": "^3.0.1",
+		"astro": "^2.0.4",
+		"tailwindcss": "^3.0.24"
 	}
 }
