--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,12 +42,13 @@ jobs:
       - name: Install dependencies
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
       - run: npm install -g serverless serverless-scaleway-functions  
 
       - name: Deploy project
         env:
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_PROJECT_ID: ${{ secrets.SCW_PROJECT_ID }}
+          SCW_REGION: ${{ secrets.SCW_REGION }}
         run: |
           docker run --rm -v $(pwd):/app -v /var/run/docker.sock:/var/run/docker.sock -e SCW_SECRET_KEY -e SCW_PROJECT_ID docker:latest sh -c 'cd /app && serverless deploy'
