--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,9 +43,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-
-      - name: Install Serverless Framework
-        run: npm install -g serverless serverless-scaleway-functions  
+      - run: yarn global add serverless serverless-scaleway-functions  
 
       - name: Deploy project
         env:
