--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2 
 
       - name: Install dependencies
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
       - run: yarn 
@@ -38,12 +38,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Install node
+        run: apt update && apt install -y nodejs npm
 
-      - name: Install dependencies
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.x'
-      - run: yarn global add serverless serverless-scaleway-functions  
+      - name: Install Serverless Framework
+        run: npm install -g serverless serverless-scaleway-functions
 
       - name: Deploy project
         env:
