--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: latest
       - run: yarn 
 
       - name: Build project
@@ -34,21 +34,22 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container: 
-      image: docker:latest
+      image: node:latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Install node
-        run: apt update && apt install -y nodejs npm
-
-      - name: Install Serverless Framework
-        run: npm install -g serverless serverless-scaleway-functions
-
-      - name: Deploy project
+      - name: Use Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+      
+      - name: Serverless deploy
+        uses: serverless/github-actions@v3.1
+        with:
+          args: -c "serverless plugin install --name serverless-scaleway-functions && serverless deploy"
+          entrypoint: /bin/sh
         env:
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_PROJECT_ID: ${{ secrets.SCW_PROJECT_ID }}
           SCW_REGION: ${{ secrets.SCW_REGION }}
-        run: |
-          docker run --rm -v $(pwd):/app -v /var/run/docker.sock:/var/run/docker.sock -e SCW_SECRET_KEY -e SCW_PROJECT_ID docker:latest sh -c 'cd /app && serverless deploy'
