--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/tailwind": "^3.0.1",
 		"astro": "^2.0.4",
+		"astro-compress": "^1.1.35",
 		"tailwindcss": "^3.0.24"
 	}
 }
