--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"@astrojs/tailwind": "^3.0.1",
 		"astro": "^2.0.4",
 		"astro-compress": "^1.1.35",
-		"tailwindcss": "^3.0.24"
+		"tailwindcss": "^3.3.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9"
 	}
 }
