blog dans config.yml

--- a/public/edit/config.yml
+++ b/public/edit/config.yml
@@ -26,5 +26,14 @@ collections:
       - { label: "Téléphone du responsable de l'offre", name: "hr_phone", widget: "string" }
       - { label: "Description du poste", name: "description", widget: "list", field: {label: "Élément descriptif", name: "decription_item", widget: "text"} }
       - { label: "Profil recherché", name: "profile", widget: "text" }
-
+  - name: "blog"
+    label: "Le blog"
+    folder: "src/content/blog"
+    create: true
+    fields:
+      - { label: "Titre", name: "title", widget: "string"}
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Autheur", name: "author", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Corps", name: "body", widget: "text" }
 
