--- a/public/edit/config.yml
+++ b/public/edit/config.yml
@@ -35,5 +35,5 @@ collections:
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Autheur", name: "author", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
-      - { label: "Corps", name: "body", widget: "text" }
+      - { label: "Corps", name: "body", widget: "markdown" }
 
