--- a/public/edit/config.yml
+++ b/public/edit/config.yml
@@ -16,6 +16,7 @@ collections:
     create: true
     fields:
       - { label: "Titre", name: "title", widget: "string"}
+      - { label: "Résumé de l'offre", name: "summary", widget: "text" }
       - { label: "Salaire", name: "salary", widget: "string" }
       - { label: "Prise de poste", name: "starting_date", widget: "datetime" }
       - { label: "Expérience", name: "experience", widget: "string" }
@@ -38,6 +39,6 @@ collections:
       - { label: "Titre", name: "title", widget: "string"}
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Auteur", name: "author", widget: "string" }
-      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Description", name: "description", widget: "text" }
       - { label: "Corps", name: "body", widget: "markdown" }
 
