--- a/public/edit/config.yml
+++ b/public/edit/config.yml
@@ -17,6 +17,7 @@ collections:
     fields:
       - { label: "Titre", name: "title", widget: "string"}
       - { label: "Résumé de l'offre", name: "summary", widget: "text" }
+      - { label: "Date de publication", name: "publish_date", widget: "datetime" }
       - { label: "Salaire", name: "salary", widget: "string" }
       - { label: "Prise de poste", name: "starting_date", widget: "datetime" }
       - { label: "Expérience", name: "experience", widget: "string" }
