--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/sitemap": "^1.3.2",
 		"@astrojs/tailwind": "^3.1.2",
 		"astro": "^2.1.3",
-		"astro-compress": "^1.1.35",
+		"astro-compress": "^1.1.46",
 		"tailwindcss": "^3.3.2"
 	},
 	"devDependencies": {
